<resources>
    <string name="app_name">My Application</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="username">User Name</string>
    <string name="title_activity_navigation">Navigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Pictures</string>
    <string name="menu_slideshow">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rememberMeLabel">Remember Me</string>
    <string name="loginButtonTxt">Log In</string>
    <string name="registerButtonTxt">Register</string>
    <string name="createAccountBtn">Create Account</string>
    <string name="addUserNameHint">Name</string>
    <string name="addUserJobHint">Job</string>
    <string name="addUserButton">Add User</string>
</resources>