<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation2"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.myapplication.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.myapplication.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.myapplication.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/listUserFragment"
        android:name="com.example.myapplication.ListUserFragment"
        android:label="List User"
        tools:layout="@layout/fragment_list_user" />
    <fragment
        android:id="@+id/addUserFragment"
        android:name="com.example.myapplication.AddUserFragment"
        android:label="Add User"
        tools:layout="@layout/fragment_add_user" />
    <fragment
        android:id="@+id/logutFragment"
        android:name="com.example.myapplication.LogutFragment"
        android:label="fragment_logut"
        tools:layout="@layout/fragment_logut" />


</navigation>